--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ opt-einsum==3.3.0
 protobuf==3.14.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pandas==1.2.3
 requests==2.25.0
 requests-oauthlib==1.3.0
 rsa==4.6
